--- a/sub_23.html
+++ b/sub_23.html
@@ -1,9 +1,9 @@
-
 <!doctype html>
 <html lang="ko">
+
 <head>
 	<title>그린매거진</title>
-	<meta charset="utf-8"/>
+	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta property="og:title" content="그린매거진">
 	<meta property="og:description" content="그린매거진 웹진을 만나보세요.">
@@ -15,82 +15,98 @@
 	<link rel="stylesheet" type="text/css" href="css/sub.css?ver=202502" />
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="js/script2.js?ver202502"></script>
-<style>
-:root {
-	--main-color: #CC2F19;
-	--text-color-small: #fff;
-	--text-color-title: #fff;
-	--text-color-title2: #fff;
-	--box-width: 600px;
-	--box-text-color: #CC2F19;
-	--bg-color: #ECEEF4;
-}
-body {
-	background-color: var(--bg-color);
-}
-.article-header-text h2 {
-	font-family: Pretendard;
-	font-size: 4rem;
-	font-weight: 600;
-	letter-spacing: -0.1rem;
-}
-.article-header-text h3 {
-	font-size: 4.4rem;
-}
-.article-header-text h4 {
-	font-family: Paperlogy-3Light;
-	margin-bottom: 0.2rem;
-}
-.quote-normal:after, .quote-normal:before {
-	display: none;
-}
-.chef-qr {
-	display: flex;
-	gap: 2rem;
-	align-items: center;
-	margin: 2rem 0 0;
-	padding: 1rem 0;
-}
-.chef-qr figure {
-	width: 30%;
-}
-.chef-qr h4 {
-	flex: 1;
-	margin-top: 0;
-	color: var(--box-text-color);
-}
-p.chef-tag {
-	text-align: left;
-	margin-top: 1rem;
-	font-size: 1.2rem;
-	margin-bottom: 0;
-}
-.dual-caption figcaption {
-	display: flex;
-	justify-content: space-between;
-	color: #666;
-}
-.dual-caption figcaption span {
-	display: block;
-}
-@media (max-width:767px) {
-	.article-header-text h2 {
-		font-size: 2.8rem;
-		margin-bottom: 1rem;
-	}
-	.article-header-text h4 {
-		font-size: 1.5rem;
-	}
-	.article-header-text h3 {
-		font-size: 2.1rem;
-	}
-	.chef-box {
-		width: 100%;
-	}
-}
-	
-</style>
+	<style>
+		:root {
+			--main-color: #124173;
+			--text-color-small: #fff;
+			--text-color-title: #fff;
+			--text-color-title2: #fff;
+			--box-width: 600px;
+			--box-text-color: #124173;
+			--bg-color: #ECEEF4;
+		}
+
+		body {
+			background-color: var(--bg-color);
+		}
+
+		.article-header-text h2 {
+			font-family: Pretendard;
+			font-size: 4rem;
+			font-weight: 600;
+			letter-spacing: -0.1rem;
+		}
+
+		.article-header-text h3 {
+			font-size: 4.4rem;
+		}
+
+		.article-header-text h4 {
+			font-family: Paperlogy-3Light;
+			margin-bottom: 0.2rem;
+		}
+
+		.quote-normal:after,
+		.quote-normal:before {
+			display: none;
+		}
+
+		.chef-qr {
+			display: flex;
+			gap: 2rem;
+			align-items: center;
+			margin: 2rem 0 0;
+			padding: 1rem 0;
+		}
+
+		.chef-qr figure {
+			width: 30%;
+		}
+
+		.chef-qr h4 {
+			flex: 1;
+			margin-top: 0;
+			color: var(--box-text-color);
+		}
+
+		p.chef-tag {
+			text-align: left;
+			margin-top: 1rem;
+			font-size: 1.2rem;
+			margin-bottom: 0;
+		}
+
+		.dual-caption figcaption {
+			display: flex;
+			justify-content: space-between;
+			color: #666;
+		}
+
+		.dual-caption figcaption span {
+			display: block;
+		}
+
+		@media (max-width:767px) {
+			.article-header-text h2 {
+				font-size: 2.8rem;
+				margin-bottom: 1rem;
+			}
+
+			.article-header-text h4 {
+				font-size: 1.5rem;
+			}
+
+			.article-header-text h3 {
+				font-size: 2.1rem;
+			}
+
+			.chef-box {
+				width: 100%;
+			}
+		}
+	</style>
 </head>
+
 <body>
 	<header class="header" id="header"></header>
 	<main>
@@ -100,11 +116,10 @@ p.chef-tag {
 					<div class="article-header-text">
 						<span>셀럽의 식탁</span>
 						<h2>
-							한 권의 만화, 한 접시의 상상<br>
-							상상과 현실 사이의 요리를 빚는 셰프
+							사람의 사연을, 권리를, 자리를 <br>변호하는 사람
 						</h2>
 						<h4>
-							조광효 셰프
+							'이상한 변호사 우영우' 원작자 <br>신민영 대표변호사
 						</h4>
 						<!-- <h3>
 							맛상무
@@ -132,7 +147,8 @@ p.chef-tag {
 			<div class="article-body-wrap">
 				<div class="article-prologue">
 					<p>
-						만화책을 뒤적이며 떠올린 맛, 만화방에서 태어난 떡볶이, 그리고 지금은 짜장면의 새로운 공식을 찾는 실험실까지. 조광효 셰프의 요리는 늘 상상과 현실 사이를 부지런히 뛰어다닌다.
+						국선전담변호사에서 금융·부동산 전문 변호사로, 나아가 법정에서의 경험을 책과 드라마로까지 확장해온 길. 신민영 변호사의 행보는 분야는 달라져도 중심은 늘 같았다. 사람을
+						이해하고, 그 곁을 지키는 일을 흔들림 없는 업으로 삼아온 여정이었다.
 					</p>
 				</div>
 				<div class="article-text">
@@ -144,24 +160,18 @@ p.chef-tag {
 						</div>
 					</div>
 					<p>
-						넷플릭스 시리즈 〈흑백요리사〉 속, 각자의 사연을 품은 셰프들 가운데 단연 시선을 끈 인물이 있었다. 요리를 독학으로 배운 조광효 셰프. 그에게 요리의 교과서는 학교가 아니라 ‘만화책’이었다.
-					</p>
-					<p>학창 시절, 늘 만화를 끼고 살았던 소년은 자연스레 미술대학으로 진학했고, 졸업 후에는 자전거 회사에서 제품 디자이너로 일했다. 그러던 어느 날, 감성 만화방이 인기를 얻던 시절 그도 친구와 함께 “우리도 저런 거 해보자”는 마음으로 2015년 작은 만화방을 열었다. 
-					</p>
-					<p>
-						하지만 현실은 달랐다. 돈이 없어서 만화책은 몇 권 되지 않았고, 그래서 ‘음식을 팔자’는 쪽으로 방향을 틀었다. 그때 만든 메뉴가 바로 만화 속에서 본 음식들이었다. “만화를 보며 먹을 수 있는 음식이 있으면 좋겠다”는 가벼운 발상으로 시작한 메뉴, 떡볶이에 밥 덩어리를 얹은 ‘떠먹는 떡볶이’. 가볍게 시작한 시도였지만, 그 한 접시가 훗날 조광효라는 이름을 요리의 세계로 끌어당긴 첫 단서가 됐다. 
+						신민영 변호사의 경력은 묵직하다. 서울대학교 법과대를 졸업하고 2006년 제48회 사법시험에 합격한 뒤, 사법연수원을 거쳐 2012년부터 2018년까지 국선전담변호사로
+						활동했다. 그 기간 동안 그는 형사 사건 1,000건, 국민참여재판 50건 이상을 맡았다. 법조인의 이력에서 ‘형사 사건 1,000건’은 단순한 이력이 아니다. 수백 명의
+						삶과 마주한 시간의 총합이었다.
 					</p>
 					<p>
-						그에게 만화는 여전히 가장 확실한 영감의 원천이다. 춘권, 타르트, 동파육처럼 만화 속에 등장하는 음식을 실제로 구현하며 ‘상상 속 맛’을 현실의 레시피로 옮긴다. 중국 주부들이 즐겨보는 요리책을 참고하고, 현지 가정식 조리법을 연구하며 상상과 기술 사이의 균형을 찾는다. 그의 요리는 늘 그 사이에 있다. 만화의 상상과 현실의 맛, 그리고 요리를 향한 진지한 탐구심 사이에.
+						그는 그 시간들을 흘려보내지 않았다. 사건의 기록 뒤에 남은 잔열을 붙잡아 2016년 『왜 나는 그들을 변호하는가(한겨레출판)』를 펴냈다. 그 책의 여러 사건들은 후일
+						화제의 법정 드라마 <이상한 변호사 우영우(2022년)>의 주요 에피소드로 재탄생했다.
 					</p>
 					<p>
-						현재 그는 자신이 직접 운영하는 공간 ‘조광201’에서 짜장면과 중식의 새로운 공식을 연구하고 있다. 밀가루를 블렌딩해 직접 면을 뽑고, 불맛을 입히는 새로운 방식을 실험하며 ‘낯익은 재료로 낯선 맛을 내는 법’을 찾아가고 있다. 이곳은 단순한 식당이 아니라, 조광효 셰프의 실험실이다.
-					</p>
-					<p>
-						그는 기술을 넘어 감정의 언어로서도 요리를 이야기하기도 한다. 최근에 쓴 두 권의 책 『만찢남의 오타쿠 레시피(세미콜론)』와 『만찢남의 인생 정식(책깃)』에는 그의 실험과 철학이 담담히 녹아 있다. 요리를 통해 사고하고, 생각을 조리하며, 일상의 감정을 한 접시에 담아내는 사람.
-					</p>
-					<p>
-						조광효 셰프는 오늘도, 작은 공간 한 켠에서 정답을 찾기보다 새로운 해석을 위한 실험을 계속하고 있다.
+						국선전담변호사 이후 그는 또 다른 길로 방향을 틀었다. 금융·부동산 분야로 전문 영역을 확장해, 현재는 법무법인 호암의 대표변호사로서 복잡한 민사·자문·기업 사건을 이끌고
+						있다. 형사에서 민사로, 몸으로 밀어내는 ‘수비’에서 새로운 판을 설계하는 ‘공격’까지. 이제 그는 공격과 수비를 동시에 수행해야 하는 법률의 경기장에서 자신의 역할을
+						단단히 굳혀가고 있다.
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -171,28 +181,53 @@ p.chef-tag {
 						</div>
 					</div>
 					<h5>
-						어린 시절 라면을 남다른 방식으로 끓여 드셨다고 들었어요. 그때만의 비법이 있었나요?
+						어떤 계기로 법조계에 입문하게 되셨나요?
 					</h5>
 					<p>
-						어릴 때 TV에서 스쳐 지나간 장면을 따라 해봤는데, 라면에 식초를 넣어보니 의외로 맛이 괜찮더라고요. 다들 신기해했지만, 제게는 그때가 ‘나만의 비법’을 찾은 순간이자 요리가 재미있다고 느낀 첫 경험이었어요. 지금은 라면을 끓일 때 한 봉지 기준으로 설탕 한 꼬집, 미원 한 꼬집을 꼭 넣습니다. 그러면 국물 맛이 한결 또렷해지고 감칠맛이 살아나요.
+						처음부터 “법조인은 꼭 돼야겠다”는 확고한 목표가 있었던 건 아니었습니다. 전공이 법학이었고, 주변 친구들을 따라 자연스럽게 사법시험을 준비하게 된 케이스였어요. 그런데
+						초반에는 법 자체에 큰 흥미를 느끼지 못해 잠시 은행에서 일한 적도 있습니다. 그러다 어느 순간 ‘그래도 이 길을 한 번은 제대로 걸어봐야 하지 않을까’라는 마음이 들었고,
+						그때부터 조금씩 방향을 잡아 지금의 자리까지 오게 된 것 같아요.
 					</p>
 					<h5>
-						셰프님은 만화에서 많은 영향을 받으신 것 같아요. 특히 좋아했던 만화와 그 이유는 무엇인가요? 
+						국선전담변호사로 일하신 6년은 변호사님의 시선과 가치관에 어떤 영향을 주었나요?
 					</h5>
 					<p>
-						어릴 때 〈미스터 맛짱〉을 정말 좋아했어요. 주인공이 다소 소시오패스처럼 보이기도 하지만, 요리에 임할 때만큼은 누구보다 진지한 인물이거든요. 항상 ‘이기는 요리’를 하려고 하는데, 그 승부욕이 단순히 결과에만 있는 게 아니라 요리를 완성하기 위해 시도하는 엽기적이면서도 기발한 방식들에 있죠. 그런 과정을 보면서 ‘요리란 이렇게도 생각할 수 있구나’ 하는 발상의 전환을 자주 느꼈던 것 같습니다.
+						국선전담 시절에는 정말 다양한 사연을 지닌 분들을 만났습니다. 그 경험은 변호사라는 직업이 단순히 법률 서비스를 제공하는 일을 넘어, 어려움에 처한 사람의 곁에 잠시라도
+						서주는 일이라는 사실을 깊이 깨닫게 했어요.
+					</p>
+					<p>
+						저는 직장 생활을 하다가 변호사가 되었고, 국선을 거쳐 일반 사건을 맡기까지 여러 단계를 지나왔습니다. 그 과정에서 확실히 자리 잡은 가치관이 하나 있어요. 변호사는 정말
+						‘복 받은 직업’이라는 점입니다. 힘든 상황에 있는 사람의 이야기를 듣고 돕고, 때로는 사회적 비난을 받는 사람이라도 최소한 한 번은 그의 입장에서 이야기를 들어줄 수
+						있으니까요. 그 모든 과정이 제게는 영성과 인격을 단련하는 뜻깊은 시간이었습니다. 그래서 저는 이 직업을 매력적이라고 느껴요.
 					</p>
 					<h5>
-						만화 속 레시피를 실제로 따라 해보신 적도 있나요? 
+						변호사님이 저술한 『왜 나는 그들을 변호하는가』가 <이상한 변호사 우영우>의 원작이라고요. 책을 쓴 계기가 궁금해요.
 					</h5>
 					<p>
-						그때 만화에 나온 레시피 중 일부는 직접 시도해 보기도 했어요. 예를 들어 고추기름 같은 건 실제로 만들어봤죠. 그런데 무엇보다 흥미로웠던 건, 당시 일본 요리 만화들이 이미 ‘분자요리’처럼 과학적인 접근을 시도하고 있었다는 점이에요. 꽤 오래전 이야기인데도 요리에 과학의 원리를 접목하려는 시도가 보였죠. 그런 점들이 제게는 굉장히 신선했고, 요리를 전혀 다른 시선으로 바라보게 해준 계기가 됐습니다.
+						국선전담변호사의 일상에는 특이한 점이 하나 있습니다. 법정에서 ‘기다리는 시간’이 정말 많다는 거예요. 재판이 시작되기 전이나 사건 사이사이마다 앉아 있는 시간이 길다 보니
+						어느 순간부터 이 시간을 그냥 흘려보내기 아깝다는 생각이 들었어요. 그래서 ‘차라리 이 시간을 활용해서 사건을 정리해보자’라는 마음으로 메모를 시작했는데, 그 기록이 모여
+						『왜 나는 그들을 변호하는가』가 되었습니다. 재미있는 점은, 그 원고를 전부 휴대폰으로 썼어요. 지금도 당시 메모들이 제 휴대폰에 그대로 남아 있습니다.
 					</p>
 					<h5>
-						만화방에서 시작된 떡볶이가 셰프님의 요리 인생의 첫 출발점이 아니었을까 싶어요. 레시피는 어떻게 탄생했나요?
+						금융·부동산 분야로 전문 영역을 옮기신 이유가 있으신가요?
 					</h5>
 					<p>
-						그날따라 친구와 다투고 있었어요. 떡볶이는 이미 만들어둔 상태였는데, 실랑이 중에 밥버거가 그릇에 떨어졌고, 그걸 맛본 순간 의외로 잘 어울리더라고요. 그래서 “이걸 좀 더 다듬어보자” 하면서 발전시키기 시작한 게 비룡 떡볶이의 시작이었죠. 특별한 비법이 있었던 건 아니에요. 다만 만화책을 보면서 한 손으로 숟가락만으로도 편하게 먹을 수 있는, 만화방 분위기에 어울리는 ‘떠먹는 떡볶이’를 만들고 싶었어요. 지금 돌이켜보면 그걸 ‘요리’라고 부를 수 있을지 모르겠지만, 제게는 창의적인 시도의 첫걸음이었던 것 같습니다.
+						사실 인생에 큰 계획을 세워본 적은 없습니다. 국선전담 이후 새로운 도전을 고민하던 시기에 해외 기관에서 제안을 받았고, 준비 과정에서 금융·부동산 업무를 접하게 되면서
+						자연스럽게 지금의 분야로 옮겨오게 됐습니다. 여러 선택지 속에서 제게 맞는 길을 찾아온 셈이죠.
+					</p>
+					<h5>
+						일하는 방식이나 사건을 바라보는 시선에는 어떤 차이가 생겼나요?
+					</h5>
+					<p>
+						가장 큰 변화는 일을 바라보는 ‘수비 방식’이 달라졌다는 점입니다. 축구로 비유하자면, 수비에는 두 가지 유형이 있어요. 하나는 적극적으로 공을 빼앗는 방식이고, 다른
+						하나는 굳이 공을 뺏지 않더라도 상대가 좋은 위치를 잡지 못하게 몸으로 밀어내며 흐름을 제한하는 방식이죠. 형사 사건, 특히 국선 사건은 후자에 더 가깝습니다. 예를 들어
+						드라마 우영우의 에피소드 중 하나처럼, 검사가 완성된 시나리오를 들고 법정에 들어오면 변호인은 그 논리에 ‘합리적 의심’을 만들어내는 것만으로도 큰 역할을 해낸 셈입니다.
+						상대의 흐름을 흔드는 수비에 가까운 일이죠.
+					</p>
+					<p>
+						반면 기업 자문이나 부동산 관련 민사 사건에서는 한 단계 더 나아가야 합니다. 상대의 논리를 흔드는 데서 끝나는 것이 아니라, 우리가 주도적으로 새로운 판을 설계해야 하죠.
+						적극적으로 공을 빼앗아 경기를 우리가 원하는 방향으로 만들어 가는 일이죠. 그래서 형사 중심의 시기와 지금처럼 민사·부동산 중심의 시기 사이의 차이는 단순히 분야의 이동이
+						아니라, 수비와 공격을 동시에 수행해야 하는 경기로 확장된 변화라고 생각합니다.
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -202,35 +237,24 @@ p.chef-tag {
 						</div>
 					</div>
 					<h5>
-						거의 독학으로 요리를 익히셨다고 들었어요. 셰프님만의 공부법이나 연구 방식이 궁금합니다.
+						일상에서 특히 주의해야 할 법률 리스크나, 스스로를 보호하기 위해 기억해두면 좋을 점이 있다면 무엇일까요?
 					</h5>
 					<p>
-						요리를 시작하기 전에 먼저 ‘내가 어떤 음식을 만들고 싶은지’를 오래 고민해요. 어느 가격대에서, 어떤 맛을 낼지, 어떤 조리 방식이 어울릴지 등을 하나하나 노트에 정리하죠. 그다음에는 필요한 조리 기법이나 재료를 찾아보고, 실제로 만들어보면서 실패 요인을 하나씩 체크합니다. 말하자면 ‘오답 노트’ 를 계속 써 내려가며 음식의 구조를 조립해 가는 방식이에요. 자전거를 조립한다고 생각하면 비슷해요. 먼저 프레임을 세우고, 바퀴를 올려봤다가 안 맞으면 빼고, 체인을 갈아 끼우고. 그런 식으로 머릿속에서 조합을 끊임없이 바꿔가며 완성해 나갑니다.
+						하나만 꼭 말씀드리자면, 피싱 범죄 수법이 정말 눈부실 정도로 정교해지고 있다는 점입니다. “나는 괜찮겠지”라는 생각을 절대 하시면 안 됩니다. 송금이 필요한 상황이
+						생기면, 그 상황 자체가 맞는지 두 번, 세 번 반드시 확인한 뒤에 보내셔야 합니다.
+					</p>
+					<p>
+						최근에는 은행 홈페이지와 거의 구분이 되지 않는 화면을 만들어 접근을 유도하거나, 유명 브랜드의 패밀리세일 문자를 사칭해 링크를 보내는 사례도 많습니다. 막상 살펴보면 주소
+						뒤 한 글자만 다른 피싱 사이트였던 경우죠.
+					</p>
+					<p>
+						‘나는 젊으니까’, ‘컴퓨터를 잘 다루니까 예외일 거야’라는 생각은 금물입니다. 누구나 피해자가 될 수 있다는 전제를 가지고 조심하는 것, 그것이 스스로를 지키는 가장
+						확실한 방법입니다.
 					</p>
 					<h5>
-						일식·분식·중식 등 스펙트럼이 넓은데, 특히 중식에서 매력을 느끼는 이유는 무엇인가요? 
+						변호사라는 일은 사람의 이야기를 가장 가까이에서 듣고, 때로는 무거운 책임을 감당해야 하는 직업이기도 합니다. 심리적으로 어려운 순간이 찾아올 때, 변호사님만의 균형을
+						유지하는 방식이 있나요?
 					</h5>
-					<p>
-						저렴한 재료로도 놀랄 만큼 맛있는 요리를 만들 수 있다는 점이에요. 그래서 요리사가 원재료에 개입할 수 있는 여지가 정말 많더라고요. ‘이 부분은 오일로 맛의 층을 줄 수 있겠구나’, ‘여기는 식감을 완전히 다르게 만들어볼 수 있겠네’ 하며 다양한 시도를 해볼 수 있죠. 정해진 요리의 틀에서 조금 벗어나니까 오히려 제가 개입할 수 있는 지점이 많아지고, 그만큼 더 흥미롭게 느껴집니다.
-					</p>
-					<h5>
-						『만찢남의 오타쿠 레시피』에는 다양한 메뉴가 등장하지만, 의외로 레시피는 심플하더라고요. 선정 기준이 있었나요?
-					</h5>
-					<p>
-						영감이 꼭 만화책에서만 나오진 않아요. 다만 만화를 보면서 “요리를 구상하는 나만의 방식”을 한 번 정리해보고 싶다는 생각이 들었어요. 만화 속 음식을 그대로 따라 만들 때도 있지만, 그 장면에서 느껴지는 분위기나 감정을 요리로 어떻게 표현할까 고민하는 과정이 더 흥미로웠거든요. 그래서 책도 그런 느낌을 살리고 싶었어요. 내용 자체가 가볍고, 어린이 공작책 같은 분위기랄까요. 집에 있는 젓가락, 종이컵, 페트병 같은 걸로도 뚝딱 무언가 만들어낼 수 있듯이, “레시피도 너무 어렵거나 복잡하게 가지 말자”는 마음으로 쉽고 재밌게 구성했습니다.
-					</p>
-					<h5>
-						식재료를 바라보는 셰프님의 관점이 궁금해요.
-					</h5>
-					<p>
-						식재료가 정말 가장 중요하다고 생각해요. 좋은 재료는 땅에서부터 이미 ‘요리’가 거의 완성된 상태로 올라오는 경우도 있거든요. 그래서 그런 재료들을 만날 땐 괜히 “멋을 부리지 말자, 있는 그대로의 맛을 살리자”는 생각을 많이 합니다. 또 하나는 로스를 어떻게 줄일까, 그리고 이 재료를 다른 요리에 어떻게 다시 활용할 수 있을까를 늘 고민해요. 결국 요리는 그런 기본적인 생각들에서 출발하는 것 같습니다.
-					</p>
-					<h5>
-						셰프로 살아오면서 기억에 남는 특별한 순간이 있으셨을까요?
-					</h5>
-					<p>
-						아무래도 ‘흑백 요리사’에 출연했던 경험이 가장 인상 깊었어요. 그 무대에서 요리하고, 함께했던 셰프들을 가까이에서 보는 것 자체가 큰 배움이었죠. “아, 이분들은 진짜 요리사다”라고 느껴지는 분들이었거든요. 그런 분들 옆에서 요리했다는 사실만으로도 제게는 너무 큰 경험이었어요. 15인까지 올라갔던 것도 물론 의미가 있었지만, 그 과정 자체가 제게는 더 값진 시간이었습니다.
-					</p>
 					<div class="article-image">
 						<div class="article-image-container">
 							<figure>
@@ -238,53 +262,65 @@ p.chef-tag {
 							</figure>
 						</div>
 					</div>
-					<h5>
-						앞으로 꼭 해보고 싶은 요리가 있을까요?
-					</h5>
 					<p>
-						요즘은 짜장면을 집중적으로 연구하고 있어요. 밀가루를 종류별로 블렌딩하는 것부터 시작해서, 면에 불맛을 입히는 법, 연기를 스며들게 하는 방법까지 세세하게 테스트 중이에요. 화려한 재료를 쓰지 않아도, 집에서 면만 넣으면 불향이 살아 있는 짬뽕이나 짜장면을 만들 수 있는 방법을 찾고 있습니다. 제가 하고 싶은 건, 남들이 아는 짜장면에 내가 어떻게 ‘살짝’ 개입할 수 있을까 그 지점을 찾는 거예요. 말하자면 요리에 조금 덜 개입하면서도, 새로운 맛의 문을 열 수 있는 방법을 찾고 연구하고 있는 거죠. 
+						적어도 저는 ‘비관하는 자를 위해 준비된 미래는 없다’고 생각합니다. 결국 미래란, 크든 작든 낙관을 선택하는 사람들의 몫이라고 믿고 있어요. 어차피 살아야 하는
+						인생이라면, 의식적으로라도 낙관을 택하는 편입니다. 그래서 흔히 말하듯 ‘지어내서라도 낙관한다’ 는 편이에요. 조금 극단적인 비유지만, 저는 제 마음가짐을 스폰지밥에
+						비유하고는 합니다. 어떤 일이 와도 퐁퐁 튕겨내며 다시 제자리로 돌아오는 방식이죠. 그게 저만의 균형을 회복하는 힘이 되는 것 같습니다.
 					</p>
 					<h5>
-						셰프님이 그리는 앞으로의 요리 세계는 어떤 모습인가요.
+						앞으로의 목표와 계획이 궁금합니다.
 					</h5>
 					<p>
-						2019년에 요리를 본격적으로 시작했을 때 세운 꿈이 하나 있어요. 바로 ‘미쉐린 빕 구르망’ 선정이에요. 다른 꿈 없이 지금도 계속 그 꿈만 꾸고 있습니다. 내년이든, 내후년이든 언젠가 꼭 이뤄내고 싶어요.
+						제가 하는 일을 좋아하고, 감사하게도 잘 맞는다고 느끼고 있습니다. 그래서 무엇보다 이 일을 오래, 그리고 건강하게 이어갈 수 있기를 바랍니다. 다만 요즘은 변호사 업계에도
+						AI 바람이 거세게 불고, 네트워크 로펌이나 광고 중심 로펌들이 늘어나면서 변호사로서의 정체성에 대한 고민이 많아졌어요. 그럼에도 저는 이 변화 속에서도 ‘사람을 본다’는
+						변호사의 본질을 놓치지 않으려고 합니다. 그 본질에 성실히 매진하는 것, 그것이 앞으로의 가장 큰 목표입니다.
 						<i class="icon_last"></i>
 					</p>
+					<div class="article-image">
+						<div class="article-image-container">
+							<figure>
+								<img src="contents/sub_23_image_5.jpg">
+							</figure>
+						</div>
+					</div>
 					<article>
 						<div class="chef-box">
 							<div class="chef-box-header">
 								<span>
-									조광효 셰프의 식탁 
+									신민영 변호사의 식탁
 								</span>
 								<h6>
-									계란과 닭!<br>가장 단순해서 가장 맛있는
+									입맛은 살리고<br>혈당은 낮추는 고춧잎
 								</h6>
 							</div>
 							<div class="chef-box-image">
 								<figure><img src="contents/sub_23_image_box.jpg" /></figure>
 							</div>
 							<blockquote>
-								“계란이랑 닭을 정말 좋아해요. 집에서는 아들이 계란말이를 좋아해서 자주 해주고요. 닭 요리는 복잡하게 하지 않아요. 그냥 물에 삶아 끓여 먹는 단순한 방식이 좋습니다. 재료가 좋으면 그 자체로 충분히 맛이 나니까요.”
+								“고춧잎 정말 좋아합니다. 고춧잎이 최고예요. 고추장, 참기름, 깨만 살짝 넣어 무친 고춧잎을제철 보리·쇠고기밥에 쓱 비벼 먹으면 세상에 그만한 행복이 또
+								없습니다.”
 							</blockquote>
 							<p>
-								재래종 토종닭은 기름기가 적고 콜라겐이 풍부해 쫄깃한 식감과 깊은 감칠맛을 자랑하지만, 사육 기간이 길다는 한계가 있었다. 이를 보완하기 위해 농촌진흥청이 개발한 품종이 바로 ‘우리맛닭 1호’다. 빠르게 자라는 닭, 맛이 좋은 닭, 알을 잘 낳는 닭 이 세 가지 순계를 선발해 성장 속도와 풍미를 모두 잡은 새로운 토종닭을 만들어낸 것이다.
+								고춧잎은 식후 혈당 상승을 억제하는 AGI(α-글루코시다아제 저해) 활성이 높은 식물로, 혈당 관리에 도움을 줄 수 있는 기능성 원료다. 농촌진흥청은 이
+								성분에 주목해 850여 고추 유전자원을 분석했고, 그 결과 기존 품종보다 AGI 활성이 약 4배 높은 ‘원기1호’, 그리고 이보다 약 3배 더 높은
+								‘원기2호’를 개발했다.
 							</p>
 							<p>
-								이후 2010년에는 ‘우리맛닭 2호’가 탄생했다. 1호의 육질을 유지하면서도 성장 속도를 더욱 높이는 데 중점을 두었고, 실제로 1호보다 약 30% 빠르게 자란다. 육질 역시 한층 부드럽다는 평가를 받는다.
+								‘원기2호’의 AGI 활성은 74.8%로, 당뇨 치료제 아카보스(80.2%)에 근접한 수준이다. 동물실험에서도 공복 혈당, 당화혈색소, 인슐린 농도 등
+								당뇨·대사 관련 지표가 유의하게 개선되며 항당뇨·항비만 효과가 확인됐다.
 							</p>
 							<p>
-								지금도 우리맛닭의 개량은 계속되고 있으며, 앞으로는 용도와 목적에 맞춘 더 다양한 국산 토종닭을 만나볼 수 있을 것으로 기대된다.
+								고춧잎은 나물, 무침, 장아찌 등 일반 조리로 활용이 쉬워 기능성과 식재료성을 동시에 가진다는 점에서도 주목된다.
 							</p>
 							<div class="chef-qr">
 								<figure>
 									<img src="contents/sub_23_image_qr.png">
 								</figure>
 								<div class="chef-qr-text">
-									<h4>맛상무 편!</h4>
-									<p class="chef-tag">지금 바로 QR코드를 스캔하고 감상해 보세요! 조광효 셰프의 인터뷰 영상은 1월호에서 만날 수 있습니다.</p>
+									<h4>조광효 셰프 편!</h4>
+									<p class="chef-tag">지금 바로 QR코드를 스캔하고 감상해 보세요!</p>
 								</div>
-							</div>							
+							</div>
 						</div>
 					</article>
 
@@ -295,4 +331,5 @@ p.chef-tag {
 	</main>
 	<footer class="footer" id="footer"></footer>
 </body>
+
 </html>
