--- a/sub_41.html
+++ b/sub_41.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="ko">
+
 <head>
 	<title>그린매거진</title>
-	<meta charset="utf-8"/>
+	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta property="og:title" content="그린매거진">
 	<meta property="og:description" content="그린매거진 웹진을 만나보세요.">
@@ -14,57 +15,66 @@
 	<link rel="stylesheet" type="text/css" href="css/sub.css?ver=202502" />
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="js/script2.js?ver202502"></script>
-<style>
-	:root {
-		--main-color: #2F95D8;
-		--text-color-small: #fff;
-		--text-color-title: #235898;
-		--text-color-title2: #fff;
-		--book-tag-color: #5AA5DB;
-		--book-head-color: #000;
-	}
+	<style>
+		:root {
+			--main-color: #2475B3;
+			--text-color-small: #fff;
+			--text-color-title: #E1E6F0;
+			--text-color-title2: #fff;
+			--book-tag-color: #2475B3;
+			--book-head-color: #2475B3;
+		}
 
-.article-text p em {
-	background-color: #6AD929;
-}
-span.pipe {
-    font-weight: 300;
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-}
-.quote-normal {
-	margin-bottom: 5rem;
-}
-.article-image.dual-image .article-image-container {
-	display: grid;
-	grid-template-columns: 388fr 780fr;
-}
-@media (max-width:767px) {
-	.article-header-text h3 {
-		font-size: 3rem;
-	}
-	.article-header-text h4 {
-		margin-bottom: 0;
-		margin-top: 1rem;
-	}
-	.header-dual .article-header-text p {
-		width: 100%;
-	}
-	.header-dual .article-header-container {
-		gap: 2rem;
-		display: grid;
-		grid-template-columns: 1fr;
-	}
-	.article-header-image {
-		order: 1;
-	}
-	.article-header-text {
-		order: 2;
-	}
-}
+		.article-text p em {
+			background-color: #6AD929;
+		}
 
-</style>
+		span.pipe {
+			font-weight: 300;
+			margin-left: 0.5rem;
+			margin-right: 0.5rem;
+		}
+
+		.quote-normal {
+			margin-bottom: 5rem;
+		}
+
+		.article-image.dual-image .article-image-container {
+			display: grid;
+			grid-template-columns: 388fr 780fr;
+		}
+
+		@media (max-width:767px) {
+			.article-header-text h3 {
+				font-size: 3rem;
+			}
+
+			.article-header-text h4 {
+				margin-bottom: 0;
+				margin-top: 1rem;
+			}
+
+			.header-dual .article-header-text p {
+				width: 100%;
+			}
+
+			.header-dual .article-header-container {
+				gap: 2rem;
+				display: grid;
+				grid-template-columns: 1fr;
+			}
+
+			.article-header-image {
+				order: 1;
+			}
+
+			.article-header-text {
+				order: 2;
+			}
+		}
+	</style>
 </head>
+
 <body>
 	<header class="header" id="header"></header>
 	<main>
@@ -74,24 +84,25 @@ span.pipe {
 					<div class="article-header-text">
 						<span>책 읽는 농업과학자</span>
 						<h2>
-							얼어붙은 땅 위에서,<br>
-							꽃의 가능성을 피워내는 연구자
+							미래농업의 전환점에서,<br>
+							농업인을 향한 약속
 						</h2>
 						<h4>
-							국립원예특작과학원 북부원예시험장
+							농촌진흥청
 						</h4>
 						<h3>
-							권오현 농업연구사
+							이승돈 청장
 						</h3>
 						<p>
-							눈보라가 매서운 철원에서도, 꽃을 피우기 위한 연구를 멈추지 않는 연구자가 있다. 권오현 농업연구사는 혹한 속에서도 피어날 꽃을 위해, 그리고 현장의 농업인과 함께 웃을 수 있는 봄을 위해, 오늘도 묵묵히 자신의 자리를 지키고 있다.
+							2025년 취임 첫해를 숨 가쁘게 보낸 이승돈 청장은 2026년을 ‘미래농업 전환의 원년’으로 삼아, 농업인의 삶을 바꾸는 연구와 정책을 예고한다. AI·데이터 기반
+							농업부터, 글로벌 협력, 현장 중심의 혁신까지. 이승돈 청장이 바라보는 대한민국 농업의 내일을 물었다.
 						</p>
 						<div class="article-meta">
 							<span class="b">글</span>
 							<span>장희주</span>
 							<span class="pipe">ㅣ</span>
 							<span class="b">사진</span>
-							<span>김준후</span>
+							<span>조재무</span>
 						</div>
 					</div>
 					<div class="article-header-image">
@@ -113,114 +124,156 @@ span.pipe {
 						</div>
 					</div>
 					<h4>
-						북부의 겨울에도 피어나는 화훼, ‘선발’로 길을 찾다 
+						2026년 새해를 맞아 <그린매거진> 독자 여러분께 인사 부탁드립니다.
 					</h4>
 					<p>
-						권오현 농업연구사는 대한민국의 최전방, 철원에 위치한 북부원예시험장에서 정원과 경관에 활용할 수 있는 화훼류의 ‘추위 적응성’을 연구하고 있다. 혹한의 환경에서도 피어나는 꽃, 그 가능성을 탐구하는 일이 바로 그의 연구다. 
+						안녕하세요, 그린매거진 독자 여러분! 2026년 병오년, 붉은 말의 기운이 힘차게 떠오르는 새해가 밝았습니다. 새해 복 많이 받으십시오!
 					</p>
 					<p>
-						최근 화훼는 그저 아름다운 식물이 아니라, 도시와 농촌 곳곳의 경관과 정원 조성을 이끄는 중요한 주제로 자리 잡고 있다. 우리의 일상 공간을 풍요롭게 채우고, 계절마다 다른 빛깔로 지역의 풍경을 바꾸는 힘을 지닌 존재다. 결국 권오현 농업연구사가 찾고 있는 것은, 사계절 내내 사람들의 하루에 포근한 온기를 더해줄 꽃이다. 
+						지난 한 해 동안 우리 농업과 농촌을 지켜주신 농업인 여러분, 현장에서 함께 애써주신 모든 관계자분들, 그리고 우리 농산물을 사랑해주신 국민 여러분께 먼저 깊이
+						감사드립니다. 여러분의 땀과 노력이 모여 대한민국의 식탁을 풍요롭게 만들고, 농업의 지속 가능한 내일을 함께 열어가고 있습니다.
 					</p>
 					<p>
-						“요즘은 정원이나 경관 조성에 화훼가 정말 다양하게 활용되고 있어요. 그래서 저는 북부의 추운 기후에서도 국내에서 육성된 화훼 품종이 잘 자랄 수 있는지를 직접 평가하고, 그중에서 적응력이 뛰어난 품종을 선별하는 일을 맡고 있습니다.”
+						붉은 말이 상징하는 뜨거운 열정과 거침없는 추진력처럼, 2026년에는 농업인 여러분의 농사와 모든 도전이 더 크게 도약하길 기원합니다. 우리 농업을 아껴주시는 국민 여러분의
+						삶에도 건강과 풍요가 더욱 깊게 자리하길 바라며, 새해에는 가정과 일터마다 행복과 평안이 가득하시길 소망합니다.
+					</p>
+					<h4>2025년 취임 첫해, 가장 기억에 남는 순간은 무엇인가요?</h4>
+					<p>
+						농업·농촌을 둘러싼 대내외 여건이 쉽지 않았던 상황에서, 농촌진흥청장을 맡았던 순간부터 농업 현장에서 농업인들과 함께 호흡하며 보냈던 시간들까지. 모두 저에게는
+						특별했습니다.
 					</p>
 					<p>
-						올해 7월 문을 연 북부원예시험장은 아직 첫 단추를 꿰는 시기다. 권오현 농업연구사는 본격적인 평가에 앞서 시험 포장을 조성하며 기반을 다지고 있다. 이곳에서는 앞으로 국내 여러 기관의 우수 화훼 품종들이 저온 적응성 평가를 받게 된다. 국립원예특작과학원의 장미·무궁화·철쭉 같은 목본 화훼류는 물론, 충남농업기술원의 화단국, 전북농업기술원의 안개초와 정원용 나리, 전남농업기술원의 수국과 정원용 장미 등 다양한 국산 품종들이 이 시험에 참여할 예정이다. 
+						취임 첫해였던 만큼 국정감사 준비, 2026년도 예산안 심사 대응, AI·스마트농업 기반의 미래농업 체계를 준비하는 일까지 숨 돌릴 틈 없이 바쁘게 달렸습니다. 특히 전국의
+						농업 현장을 찾아 농업인과 농산업체 관계자들을 만나 직접 목소리를 듣고, 그 자리에서 함께 해결책을 고민했던 순간들이 큰 힘이 되었습니다.
 					</p>
 					<p>
-						“각 기관에서 받은 묘를 야외 시험 포장에 심고 나서 성장 과정을 꾸준히 지켜보게 됩니다. 겨울을 한번 지나고 나면 이듬해 봄에 새순이 잘 올라오는지, 또 그 상태가 계속 건강하게 이어지는지를 보죠. 그다음에는 월동에 성공한 개체와 그렇지 못한 개체를 나눠서, 세포 수준에서 어떤 차이가 있는지도 들여다봐요. 겉에서 보이는 모습뿐 아니라, 식물 안쪽에서 무슨 일이 일어나고 있는지도 중요하거든요. 그리고 겨울을 잘 버틴 아이들은 어떤 특징이 있는지도 함께 관찰합니다. 줄기가 얼마나 단단하게 목질화됐는지, 꽃 색이 조금 더 푸른 톤을 띠는지 이런 외형적 특성이 내한성을 예측할 수 있는 기준이 될 수 있을지 고민하면서요. 이런 과정을 차근차근 거치다 보면, 결국 추운 환경에서도 안정적으로 잘 자라는 품종들을 선별할 수 있게 됩니다.”
+						그중에서도 가장 기억에 남는 장면을 꼽으라면, 단연 9월 25일 ‘K-농업과학기술 협의체’ 출범식입니다. 농업인 단체, 학계, 농산업계가 한자리에 모여 변화하는 농업환경
+						속에서 대한민국 농업의 미래를 함께 설계하겠다고 뜻을 모은 그 순간은 정말 각별했습니다. 무엇보다 ‘본격적으로 미래농업의 전환을 시작한다’는 상징적인 순간이기도 했습니다.
+					</p>
+					<h4>
+						취임 첫해를 쉼 없이 달려오셨는데요. 그렇다면 2026년에는 어떤 목표와 핵심 비전을 가장 중점적으로 추진할 예정이신가요?
+					</h4>
+					<p>
+						농업·농촌이 직면한 구조적인 문제를 근본적으로 해결하고, 미래 경쟁력을 만들어가기 위해 ‘2026 대표 프로젝트’를 추진하고 있습니다. 먼저 본청에서는 다섯 가지 대표
+						프로젝트를 중심축으로 삼아 ‘AI 시대’와 ‘기후위기 시대’에 대응하는 체계를 강화하고 있습니다.
 					</p>
 					<p>
-						이처럼 지금은 철원에서 저온성 화훼를 선별하는 연구를 하고 있지만, 권오현 연구사의 발걸음은 늘 ‘꽃’과 함께해 왔다. 최근까지는 국립원예특작과학원 화훼과에서 포인세티아 ‘플레임(Flame)’ 개발에 참여하며, 국내 재배 환경에 맞는 품종을 만들어내는 일에 힘썼다.
+						첫째, 연구부터 보급까지 전 과정에 AI를 적용해 혁신 속도를 높이고, 둘째, 밭농업 기계화를 더욱 확대해 고령화와 일손 부족 문제를 획기적으로 줄여나가고자 합니다. 셋째,
+						병해충 예측–진단–방제의 종합 대응 체계를 강화해 기후위기 속에서도 작물을 안정적으로 지킬 준비를 하겠습니다. 또한 농업인 안전관리를 보다 현장 밀착형으로 강화해 농업인의
+						생명과 건강을 보호하고, 마지막으로 농업경영 혁신을 통해 청년농업인을 포함한 농가 전체의 역량을 키워 지속가능한 농업 기반을 다지겠습니다.
 					</p>
-					<div class="article-image dual-image big-image">
+					<p>
+						아울러 4대 국립과학원에서도 각 기관의 현안과 전문성에 맞춘 20개의 중점 프로젝트가 이미 세부 계획을 마치고, 올해 1월부터 본격적으로 실행에 들어갔습니다. 농촌진흥청은
+						이러한 대표 프로젝트들이 조기에 성과를 내고, 그 성과가 실제 정책 개선과 제도 변화로 이어지도록 체계적으로 추진할 계획입니다.
+					</p>
+					<h4>
+						대표 프로젝트를 중심축으로 ‘AI 시대’와 ‘기후위기 시대’에 대응하는 체계를 강화하고 있다고 하셨는데요. 농업인이 실제로 체감할 수 있는 ‘첨단기술의 확산’은 어떻게
+						가능하다고 보시나요?
+					</h4>
+					<p>
+						디지털농업, 스마트팜, AI 기술이 정말 빠르게 발전하고 있지만, 사실 기술의 속도보다 더 중요한 건 ‘농업인이 현장에서 정말 편해졌는가, 수확량과 생산성이 실제로
+						올라갔는가’라고 생각합니다. 그래서 기술 자체보다 농가 중심의 적용성, 편의성, 표준화가 핵심입니다. 우선 시설 농업 분야에서는 온도·습도·CO₂·양분 공급량 등 농가에서
+						모인 환경·생육 빅데이터를 AI가 분석해, 작물과 지역에 맞는 최적 생육 조건을 자동으로 조절하는 체계를 목표로 하고 있습니다. 이를 위해 장비 간 호환이 가능하도록 만든
+						표준 기반 개방형 온실관리 통합플랫폼 ‘아라온실’을 개발했고, 현재 전국 3개소에서 실증을 진행 중입니다.
+					</p>
+					<p>
+						노지작물 스마트농업은 시설처럼 환경을 완전히 통제할 수는 없지만, 여러 센서·기상예보·생육진단 데이터를 결합해 환경을 예측하고 농작업을 정밀하게 수행하는 기술이 중심입니다.
+						이를 위해서는 토양수분·기상·생육 정보를 한 번에 통합 분석하고, 분석 결과가 실제 농작업으로 이어지도록 돕는 의사결정 지원 플랫폼, 그리고 작업을 처리해 줄 기계화·자동화
+						기술이 함께 발전해야 합니다. 현재 이러한 핵심 요소 기술들을 농촌진흥청에서는 단계적으로 개발하고 있습니다.
+					</p>
+					<p>
+						결국 첨단 농업기술이 농업인에게 ‘체감’되려면 현장 데이터 기반의 실용성, 장비·기술 간 표준화, 농업인 중심 설계 이 세 가지가 맞물려야 합니다. 무엇보다 기술이 중심이
+						아니라 ‘농업인이 중심’이 되는 혁신이어야 합니다.
+					</p>
+					<div class="article-image">
 						<div class="article-image-container">
 							<figure>
 								<img src="contents/sub_41_image_2.jpg">
 							</figure>
+						</div>
+					</div>
+					<blockquote class="quote-normal">
+						지속 가능한 농업, 그리고 국민과 농업인이 함께 웃을 수 있는 내일을 만드는 데 농촌진흥청의 모든 역량을 다하겠습니다.
+					</blockquote>
+					<h4>
+						2026년 한국 농업은 어떤 경쟁력을 갖춰야 할까요?
+					</h4>
+					<p>
+						2026년 한국 농업의 핵심 경쟁력은 AI 기반의 농업 혁신 능력이라고 생각합니다. 기후위기와 노동력 감소가 빠르게 진행되는 상황에서, 농업은 데이터와 인공지능을 활용한
+						정확한 진단·예측·의사결정 체계로 전환해야 지속가능성을 확보할 수 있기 때문입니다. 농촌진흥청은 이를 위해 3대 전략과 10대 과제를 추진 중입니다.
+					</p>
+					<p>
+						첫째, AI를 활용해 농가 총수입을 높이고, 안전·치유·육종· 농작업 등 전 분야에서 AI 솔루션 적용을 확대하고 있습니다. 둘째, 농업기술데이터플랫폼을 중심으로 AI
+						생태계 기반을 구축하고, 데이터·전산자원·전문인력을 체계적으로 확충하고 있습니다. 셋째, 사업 전 과정을 AI 시대에 맞게 가속화하여 연구·보급 속도를 30% 이상 줄이고,
+						서비스형 AI ‘이삭이’를 통해 농작업 의사결정을 원스톱으로 지원할 계획입니다.
+					</p>
+					<p>
+						결국 미래 농업 연구는 현장의 문제를 AI와 데이터로 해결하고, 그 성과가 농업인의 생산성과 삶의 질 향상으로 직접 이어져야 합니다. 농촌진흥청은 이러한 AI 전환을 선도해
+						한국 농업의 지속가능한 경쟁력을 뒷받침하겠습니다.
+					</p>
+					<div class="article-image">
+						<div class="article-image-container">
 							<figure>
 								<img src="contents/sub_41_image_3.jpg">
 							</figure>
 						</div>
 					</div>
-					<blockquote class="quote-normal">
-						경험과 시간의 의미를 다시 돌아보게 하고, 성취만이 아닌 과정을 살아가는 가치를 일깨워 줄 수 있을 거예요.
-					</blockquote>
 					<h4>
-						포인세티아 ‘플레임’, 한국형 화훼의 가능성을 열다
+						2026년, 글로벌 협력 확대 방향이 있다면 소개해주세요.
 					</h4>
 					<p>
-						포인세티아는 ‘크리스마스 꽃’으로 불리는 대표적인 겨울철 분화식물이다. 붉은 포엽과 초록 잎의 대비가 뚜렷해 연말이면 카페나 교회, 백화점 등에서 실내 장식용으로 널리 쓰인다. 국내 출하 물량의 약 90%가 10월에서 12월 사이에 집중될 만큼, 계절성과 상징성이 뚜렷한 작목이다. 
+						농촌진흥청은 현재 전 세계 79개국과 협력하고 있습니다. 그중에서도 국가별 맞춤형 기술을 개발·실증·보급하는 KOPIA 센터 협력, 그리고 아시아·아프리카·중남미를 잇는
+						농식품기술협력협의체 기반의 다자협력이 대표적인 국제협력 체계입니다. KOPIA는 전 세계 20개국에 센터를 두고 각국의 농업 여건에 맞는 기술을 함께 개발하고 있습니다.
 					</p>
 					<p>
-						하지만 1990년대까지만 해도 국내 농가에서 재배되는 품종은 대부분 미국과 독일에서 육성된 외국산이었다. 특히 미국에서 개발된 ‘이찌반(Eckalba)’ 품종이 시장을 거의 독점하다시피 했으며, 2001년 품종보호제도가 시행되면서 농가들은 모종 한 주당 100원 안팎의 로열티를 지불해야 했다. 재배 면적이 넓을수록 로열티 부담도 커졌고, 소규모 농가들에게는 큰 경제적 압박으로 다가왔다. 이 문제를 해결하기 위해 농촌진흥청 국립원예특작과학원은 2000년부터 국산 포인세티아 품종 육성에 나섰다.
+						2026년에는 원조 받는 나라에서 원조하는 나라로 성장한 대한민국의 위상에 걸맞게, 국제사회에서 보다 책임 있는 역할을 하려고 합니다. 이를 위해 기술·R&D·산업을
+						유기적으로 연결하는 통합형 농업 ODA 모델을 구축해 개발도상국의 지속가능한 농업 발전을 지원하고, 글로벌 협력을 한층 더 강화할 계획입니다.
+					</p>
+					<h4>국민과 농업인에게 꼭 전하고 싶은 메시지가 있다면 무엇일까요?</h4>
+					<p>
+						여러분의 식탁과 건강, 그리고 안전한 미래는 늘 농업과 맞닿아 있습니다. 농촌진흥청은 과학기술과 디지털 전환을 통해 더 깨끗하고 건강한 농산물을 제공하고, 국민 삶에 한층
+						더 가까이 다가가는 기관이 되겠습니다. 국민 여러분의 신뢰에 보답할 수 있도록 농업 혁신의 속도를 멈추지 않겠습니다.
 					</p>
 					<p>
-						“우리나라에서는 보통 포인세티아를 겨울철 단일 재배로 키워요. 그래서 착색 기간이 짧고, 또 색이 밝은 적색일수록 인기가 많습니다. 해외에서 많이 재배되는 ‘이찌반’ 같은 품종은 착색이 빠르다고 해도 보통 8주 정도 걸리거든요. 그런데 국내 농가들은 착색이 일주일만 늦어져도 난방비 부담이 커요. 그래서 국내 재배 환경과 소비자 취향에 맞는 대체 품종을 만들어보자고 생각했고, 그렇게 탄생한 게 바로 플레임입니다.” 
+						그리고 무엇보다도 농업인 여러분께 깊은 존경과 감사를 드립니다. 기후변화, 고령화, 일손 부족 등 여러 어려움 속에서도 묵묵히 현장을 지켜주시는 덕분에 우리 사회가 지속될
+						수 있습니다. 저는 언제나 현장의 목소리를 가장 먼저 듣고, 연구와 기술이 농업인 삶을 실질적으로 바꾸는 데 도움이 되도록 최선을 다하겠습니다.
 					</p>
 					<p>
-						플레임의 가장 큰 강점은 국내 재배 환경에 맞춰 개발된 품종이라는 점이다. 국내는 겨울철 난방비 부담이 크기 때문에 재배 기간이 일주일만 단축되어도 경제성이 크게 개선된다. 또한 국내 소비자들은 작고 아담한 화분형을 선호하고, 크리스마스 시즌에 수요가 집중되므로 짧은 기간에 선명하게 착색되는 품종이 유리하다. 
-					</p>
-					<p>
-						무엇보다 주목할 점은 로열티 절감 효과다. 기존 외국 품종의 경우 모종 한 주당 약 100원의 사용료를 지불해야 했지만, ‘플레임’은 약 10~14원 수준으로 낮아져 육묘업체와 재배 농가의 부담을 크게 줄였다. 그 결과 2018년부터 2022년까지 최근 5년간 국산 포인세티아 품종 보급으로 약 2억 원의 로열티 절감 효과를 거둔 것으로 나타났다. 
-					</p>
-					<p>
-						‘플레임’ 개발 과정이 순탄했던 것은 아니다. 당시 국내 포인세티아 보급을 담당하던 종묘업체가 국산 품종 보급을 중단하겠다는 입장을 밝힌 적도 있었다. 하지만 권오현 연구사는 “한 해만 더 시험해보자”는 간절한 마음으로 설득을 이어갔다. 그 결과 시장 반응이 예상보다 긍정적으로 나타났고, 국산 품종 보급은 다시 이어질 수 있었다. 무엇보다 그는 한국의 재배 환경과 소비 문화를 이해하는 것이 품종 개발의 출발점이라고 말한다. 
-					</p>
-					<p>
-						“해외에서는 포인세티아를 노지에서 크게 키우지만, 우리는 작고 아담한 화분 형태를 선호하죠. 조명 밝기가 낮은 실내에서도 색이 선명하게 보이는 게 중요하니까요. 이런 소비 문화의 차이를 이해하고 품종을 개발하는 게, 결국 농가와 시장을 잇는 연구라고 생각합니다.”
-					</p>
-					<div class="article-image">
-						<div class="article-image-container">
-							<figure>
-								<img src="contents/sub_41_image_4.jpg">
-							</figure>
-						</div>
-					</div>
-					<h4>
-						태도에 따라 직업의 가치가 달라진다
-					</h4>
-					<p>
-						최근 권오현 농업연구사가 읽은 책은 『내가 천 개의 인생에서 배운 것들』이다. 평소에는 전문 서적을 주로 보느라 다른 책을 접할 기회가 많지 않았지만, 어느 날 서점에서 우연히 이 책을 집어 들었다고 한다. 저자가 오랜 시간 다양한 사람들을 만나고, 또 자신의 가족과 삶을 돌아보며 얻은 깨달음을 담은 책이다. 화려한 성공담보다 일상의 순간들, 사랑과 관계, 태도에 대한 질문이 더 진하게 남는다. 특히 평범한 직업도 어떻게 바라보느냐에 따라 그 의미가 달라질 수 있다는 메시지가 깊이 스며 있다.
-					</p>
-					<p>
-						특히 권오현 농업연구사는 이 책을 통해 사람 사이의 관계와 일의 가치를 새삼 돌아보게 되었다고 말했다. 그중에서도 마음에 남은 장면은 아버지가 자신의 일을 대하는 태도를 바꾸며 직업의 가치를 새롭게 깨닫는 대목이었다. 
-					</p>
-					<p>
-						“’나의 태도에 따라 일의 의미와 가치가 달라질 수 있다’는 말이 참 와닿았어요. 생각해 보면 그게 제가 현장에서 연구를 해나가는 방식이랑도 비슷하더라고요. 우리 일 역시 농업인이나 보급업체 등 함께 일하는 분들의 입장을 이해해야 하잖아요. 결국 다들 잘되기를 바라는 마음은 같으니까요. 서로의 관점을 생각하면서 보람을 찾아가는 게 중요하다고 생각해요.”
-					</p>
-					<p>
-						책에서 전한 메시지처럼, ‘나의 태도에 따라 직업의 가치도 달라진다’는 말은 지금의 권오현 농업연구사에게도 깊이 닿아 있다. 처음 철원으로 발령받았을 때는 외딴곳에 홀로 떨어진 듯한 막막함도 있었지만, 그는 이 공간에서 자신이 할 수 있는 일을 찾으며 조금씩 보람을 쌓아가고 있다. 눈 내리는 철원의 겨울을 견디며 피어날 화훼처럼, 그의 연구 또한 묵묵히 이 자리에서 봄을 준비하고 있다. 
+						마지막으로, 지속 가능한 농업 그리고 국민과 농업인이 함께 웃을 수 있는 내일을 만드는 데 농촌진흥청의 모든 역량을 다하겠습니다. 여러분의 삶 가까이에서 늘 든든한 동반자가
+						되겠습니다.
 						<i class="icon_last"></i>
 					</p>
 					<article>
 						<div class="book-box">
 							<div class="book-box-header">
-								<h5>이런 분께 추천합니다</h5>
+								<h5>이승돈 농촌진흥청장의 <b>추천 도서</b></h5>
 								<h4>
-									『내가 천 개의 인생에서 배운 것들』
+									『다양성, 형평성, 포용성의 시대가 온다』
 								</h4>
 								<h6>
-									김도윤 저
+									정현천 저
 									<span class="pipe">|</span>
-									북로망스
+									트로이목마
 								</h6>
 							</div>
 							<div class="book-box-image">
 								<figure>
 									<img src="contents/sub_41_image_box.jpg" />
-								</figure> 
+								</figure>
 							</div>
 							<p>
-								이 책 덕분에 직장인으로서, 또 가족 구성원으로서의 제 모습을 다시 돌아보게 되었습니다. 각자의 역할을 충실히 해내면서도 서로의 관점을 이해하는 마음이 얼마나 중요한지, 그 소중함을 새삼 느낄 수 있었어요.
+								기후 위기, 인구 감소, 기술 전환이 동시에 밀려오고 있는 지금. 우리가 어떤 태도로 내일을 준비해야 하는지 아주 중요한 관점을 던져주는 책입니다. 저자는
+								‘같음’보다 ‘다름’을 인정하는 태도가 사회와 조직의 지속 가능성을 결정한다고 이야기합니다. 다양성이 가져오는 창의성, 형평성이 만들어내는 공정한 기회,
+								포용성이 공동체를 강화하는 힘을 여러 사례를 통해 설득력 있게 보여주고 있어요.
 							</p>
 							<p>
-								일을 하다 보면 예기치 못한 상황이 찾아오기도 하고, 원치 않던 임무를 맡게 될 때도 있죠. 그런데 그 일을 대하는 ‘태도’에 따라 일의 의미와 가치가 달라질 수 있다는 걸, 이 책을 통해 다시금 깨달았습니다. 결국 어떤 자리에서든 주어진 일을 나답게 해내려는 마음가짐이 가장 중요하다는 사실을 마음에 새기게 됐습니다.
+								농업·농촌처럼 세대도 다르고, 지역도 다르고, 역할도 다른 사람들이 함께 살아가는 분야에서는 ‘서로 다른 목소리가 공존할 때 비로소 혁신이 가능하다’는
+								메시지도 크게 와닿습니다. 올해 농정의 핵심 비전도 결국 현장의 다양한 의견을 존중하고, 세대와 지역, 경영 규모가 서로 다른 농업인들이 함께 성장할 수 있는
+								구조를 만드는 데 있습니다. 그런 점에서 이 책은 새로운 농업·농촌의 길을 고민하는 저의 생각과 자연스럽게 맞닿아 있는 책이기도 합니다.
 							</p>
 							<div class="book-box-tag">
-								<span>#인생에서_정말_소중한_것</span><br>
-								<span>#삶의_태도</span><br>
-								<span>#마음가짐</span>
+								<span>#다름을_인정하는_태도</span><br>
+								<span>#서로_다름의_공존</span>
 							</div>
 					</article>
 				</div>
@@ -229,4 +282,5 @@ span.pipe {
 	</main>
 	<footer class="footer" id="footer"></footer>
 </body>
+
 </html>
