--- a/sub_31.html
+++ b/sub_31.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="ko">
+
 <head>
 	<title>그린매거진</title>
-	<meta charset="utf-8"/>
+	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta property="og:title" content="그린매거진">
 	<meta property="og:description" content="그린매거진 웹진을 만나보세요.">
@@ -14,93 +15,119 @@
 	<link rel="stylesheet" type="text/css" href="css/sub.css?ver=202502" />
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="js/script2.js?ver202502"></script>
-<style>
-	:root {
-		--main-color: #96825D;
-		--text-color-small: #fff;
-		--text-color-title: #E0CEAB;
-		--text-color-title2: #fff;
-		--box-bg-color: #FAF3F5;
-		--box-text-color: #DD6286;
-	}
-.article-header-container {
-    grid-template-columns: 1fr 1.2fr;
-    gap: 1rem;
-}
-.article-header-text h2 {
-	font-size: 4.8rem;
-}
-.article-header-text h3 {
-	font-size: 2.5rem;
-}
-.article-header-text h3 b {
-	font-family: Paperlogy-6SemiBold;
-}
-.article-header-image figure {
-    border-radius: 0;
-    transform: rotate(0deg) translateY(0px);
-}
-.article-text h5 {
-	font-family: 'KBIZHanmaumMyungjo';
-	text-align: center;
-	margin-top: 10rem;
-	margin-bottom: 3rem;
-	font-size: 2.2rem;
-}
-.quote-normal {
-	width: 80%;
-	margin: 1rem auto 2rem;
-}
-.quote-normal:after, .quote-normal:before {
-	left: 50%;
-	transform: translateX(-50%);
-}
-.normal-box h4.normal-box-stitle {
-	font-size: 2rem;
-}
-.normal-box h5.normal-box-title {
-	font-size: 2.2rem;
-}
-.box-in-box {
-	font-size: 1.6rem;
-	margin-top: 1rem;
-	margin-bottom: 0;
-}
-.box-in-box span {
-	font-family: Paperlogy-6SemiBold;
-	font-size: 1.6rem;
-}
-.normal-box .normal-box-image {
-	display: flex;
-	gap: 0.5rem;
-	margin-top: 2rem;
-}
-.qr {
-	display: flex;
-	justify-content: center;
-	gap: 1rem;
-	margin-top: 1rem;
-}
-.qr div {
-	width: 10rem;
-	text-align: center;
-	font-size: 1.6rem;
-}
-@media (max-width: 767px) {
-    .article-header-text h2 {
-        font-size: 3rem;
-        margin-bottom: 0;
-    }
-    .normal-box {
-    	padding: 2rem;
-    }
-    .article-header-image figure {
-	    transform: rotate(0deg) translateY(-1.5rem);
-	}
-}
+	<style>
+		:root {
+			--main-color: #1E6B4E;
+			--text-color-small: #fff;
+			--text-color-title: #C4CCC1;
+			--text-color-title2: #fff;
+			--box-bg-color: #EDEFEB;
+			--box-text-color: #1E6B4E;
+		}
 
-</style>
+		.article-header-container {
+			grid-template-columns: 1fr 1.2fr;
+			gap: 1rem;
+		}
+
+		.article-header-text h2 {
+			font-size: 4.8rem;
+		}
+
+		.article-header-text h3 {
+			font-size: 2.5rem;
+		}
+
+		.article-header-text h3 b {
+			font-family: Paperlogy-6SemiBold;
+		}
+
+		.article-header-image figure {
+			border-radius: 0;
+			transform: rotate(0deg) translateY(0px);
+		}
+
+		.article-text h5 {
+			font-family: 'KBIZHanmaumMyungjo';
+			text-align: center;
+			margin-top: 10rem;
+			margin-bottom: 3rem;
+			font-size: 2.2rem;
+		}
+
+		.quote-normal {
+			width: 80%;
+			margin: 1rem auto 2rem;
+		}
+
+		.quote-normal:after,
+		.quote-normal:before {
+			left: 50%;
+			transform: translateX(-50%);
+		}
+
+		.normal-box h4.normal-box-stitle {
+			font-size: 2rem;
+		}
+
+		.normal-box h5.normal-box-title {
+			font-size: 2.2rem;
+		}
+
+		.box-in-box {
+			font-size: 1.6rem;
+			margin-top: 1rem;
+			margin-bottom: 0;
+		}
+
+		.grid-box a {
+			margin-top: 2rem;
+			display: grid;
+			grid-template-columns: 1fr 5fr;
+			gap: 2rem
+		}
+
+		.box-in-box span {
+			font-family: Paperlogy-6SemiBold;
+			font-size: 1.6rem;
+		}
+
+		.normal-box .normal-box-image {
+			display: flex;
+			gap: 0.5rem;
+			margin-top: 2rem;
+		}
+
+		.qr {
+			display: flex;
+			justify-content: center;
+			gap: 1rem;
+			margin-top: 1rem;
+		}
+
+		.qr div {
+			width: 10rem;
+			text-align: center;
+			font-size: 1.6rem;
+		}
+
+		@media (max-width: 767px) {
+			.article-header-text h2 {
+				font-size: 3rem;
+				margin-bottom: 0;
+			}
+
+			.normal-box {
+				padding: 2rem;
+			}
+
+			.article-header-image figure {
+				transform: rotate(0deg) translateY(-1.5rem);
+			}
+		}
+	</style>
 </head>
+
 <body>
 	<header class="header" id="header"></header>
 	<main>
@@ -110,10 +137,10 @@
 					<div class="article-header-text">
 						<span>청년농UP 청년꿈UP</span>
 						<h2>
-							첼리스트에서 농부로,<br>인생의 선율을 바꾸다
+							농촌에서 배우고, 자라고, 나누다
 						</h2>
 						<!-- <h4>부토 오너 셰프</h4> -->
-						<h3>농부와 첼리스트 <b>임보람 대표</b></h3>
+						<h3>팜큐베이터 농장 <b>김기현 대표</b></h3>
 						<div class="article-meta">
 							<span class="b">글</span>
 							<span>장희주</span>
@@ -137,26 +164,9 @@
 			<div class="article-body-wrap">
 				<div class="article-prologue">
 					<p>
-						음악가의 길에서 농부의 길로, 임보람 대표는 인생의 무대를 바꾸었지만 ‘진심’이라는 악보는 한 번도 바뀌지 않았다. 흙 위에서 울리는 그녀의 첼로 선율은 오늘도 젊은 농부들의 마음에 잔잔한 울림을 남긴다.
+						농촌은 지금 조용한 변화의 한가운데 서 있다. 지식과 기술, 그리고 열정을 품은 청년들이 하나둘 땅으로 돌아오고 있다. 김기현 대표의 이야기 역시 그 변화의 증거다. 흙에서
+						배우고, 기술로 성장하며, 사람과 함께 희망을 나누는 청년 농업인의 길. 지금, 농업의 미래가 그의 손에서 자라고 있다.
 					</p>
-				</div>
-				<div class="qr">
-					<div>
-						<a href="https://blog.naver.com/everxiah" target="_blank">
-							<figure>
-								<img src="contents/sub_31_qr_blog.png">
-							</figure>
-							<span>블로그</span>
-						</a>
-					</div>
-					<div>
-						<a href="https://youtube.com/@cellopia" target="_blank">
-							<figure>
-								<img src="contents/sub_31_qr_yt.png">
-							</figure>
-							<span>유튜브</span>
-						</a>
-					</div>
 				</div>
 				<div class="article-text">
 					<div class="article-image">
@@ -167,22 +177,20 @@
 						</div>
 					</div>
 					<h5>
-						무대 위의 첼리스트, 들판의 농부로 서다
+						농사는 나의 운명
 					</h5>
 					<p>
-						임보람 대표는 한때 독일에서 유학하며 첼로를 전공한, 음악가를 꿈꾸던 청년이었다. 무대 위의 조명을 받으며 첼로를 연주하던 그녀의 삶은 자유롭고 열정적이었다. 그러나 뜻밖의 일이 찾아왔다. 가정 형편이 악화되면서 학업을 중단하고 귀국해야 했던 것이다. 
+						처음부터 농부를 꿈꿨던 것은 아니었다. 김기현 대표는 어느 날 우연히 본 인터넷 강연에서 댄 바버 요리사가 말한 ‘지속 가능한 농업’에 깊이 매료되었다. 그리고는 ‘이
+						지구라는 플랫폼을 내가 사랑하는 사람들에게 계속 물려주고 싶다’는 생각이 강렬하게 남았다. 그날의 설렘은 김기현 대표를 단숨에 농업이라는 길로 끌어당겼다.
 					</p>
 					<p>
-						귀국 후 그녀는 음악에 대한 미련을 내려놓고 새로운 길을 모색했다. 대학을 졸업하고, 여러 직장과 인턴을 전전하며 또 다른 가능성을 찾아 나섰다. 하지만 그것도 오래가지 않았다. 도시의 빠른 리듬은 오히려 숨이 막혔고, 마음 한켠의 공허함은 점점 커져만 갔다. 
+						왜 그렇게 설렜는지는 스스로도 알 수 없었지만, 그는 결국 농업을 배우기 위해 전북대학교 농생물학과에 입학했다. 학교에서 식물생리학, 병리학 등을 배우며 기초를 다졌지만,
+						글로 배우는 지식만으로는 만족할 수 없었다. 그래서 방학마다 전국과 해외를 누비며 직접 장사를 경험했다. 사람들을 만나 교류하고 소통하는 일이 즐거웠고, 그 과정에서 자신이
+						가장 잘하는 일이 무엇인지 깨달았다. 바로 ‘소통’과 ‘판매’ 였다.
 					</p>
 					<p>
-						그녀의 인생은 충남 태안의 부모님 댁으로 돌아가면서 전환점을 맞았다. 당시 서리태 농사를 시작한 어머니는 “농업도 잘만 하면 경영이 되고 기업이 된다”며 농업의 비전을 강조했다. 악기를 다룬다고 손이 다칠까봐 칼로 과일도 몇 번 깎아본 적 없던 임보람 대표에게 그 말은 황당하게 들렸다. 하지만 어머니의 확신은 단단했고, 그 진심이 묘하게 마음에 남았다. 
-					</p>
-					<p>
-						그렇게 시작된 우연은 곧 운명이 됐다. 어머니의 권유로 태안군농업기술센터를 찾은 임보람 대표는 4-H 영농교육에 참여하게 된다. 젊은 농업인들이 모이는 자리라 괜스레 곱게 차려입고 갔던 날, 벚꽃이 흩날리던 봄날의 풍경이 아직도 생생하다. 그날, 충남농업기술원 강의실에서 그녀는 처음으로 ‘그’를 만났다. 한국농수산대학 버섯학과를 졸업하고 20년째 버섯농사를 이어가던 젊은 후계농, 지금의 남편이었다.
-					</p>
-					<p>
-						첫 만남부터 두 사람은 강한 끌림을 느꼈다. 농부의 삶에 진심인 그의 모습은, 긴 방황을 끝내고 싶던 임보람 대표에게 한 줄기 빛처럼 다가왔다. 그 인연은 1년 만에 결혼으로 이어졌고, 그렇게 첼리스트는 농부의 아내로서, 새로운 삶의 무대 위에 섰다.
+						그는 결국 ‘가장 나다운 길’을 선택했다. 농업 지식과 영업 능력을 결합하기로 마음먹고 부모님께 귀농 의사를 밝혔다. 놀랍게도 부모님은 그의 결정을 기꺼이 지지했고,
+						아버지는 명예퇴직까지 감행하며 아들의 꿈에 동행했다. 그렇게 청년 농부 김기현 대표의 인생이 본격적으로 시작됐다.
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -192,19 +200,26 @@
 						</div>
 					</div>
 					<h5>
-						농부의 며느리, 마케팅 팀장이 되다
+						흙에서 배운 ‘진짜 농사’
 					</h5>
 					<p>
-						결혼 후 임보람 대표는 시부모님과 남편이 함께 운영하던 표고버섯 농장에 합류했다. 시부모님과 남편이 생산을 맡았다면, 그녀는 경영학 전공과 유통관리사 자격증을 바탕으로 마케팅을 담당하기로 했다. 그동안 농장의 버섯은 대부분 도매로만 판매되고 있었지만, ‘이제 농사도 브랜딩이 필요하다’는 생각에서였다. 그렇게 임보람 대표는 스스로 ‘마케팅 팀장’을 자처하며 직거래 시장 개척에 나섰다.
+						대학에서 농학을 전공했지만, 현실의 농업은 책 속 지식만으로는 도저히 닿을 수 없는 세계였다. 김제 광활면에 첫 발을 디딘 순간부터 그는 깨달았다. 논에 들어가 써레질을
+						하고, 로터리를 치고, 모를 심는 일은 머리로 이해하는 것이 아니라 몸으로 체득해야 하는 일이라는 것을.
 					</p>
 					<p>
-						농장은 신도시 근교에 자리해 자연스럽게 젊은 소비층과 맞닿아 있었다. 임보람 대표는 이들을 주요 고객층으로 삼고, 지역 온라인 카페에 직접 홍보 글을 올리며 적극적인 마케팅에 나섰다. 동시에 젊은 감각을 더해 상품 패키지를 새롭게 디자인했다. 초기에는 배송비를 받지 않고 무료 배달을 진행하며 단골 고객을 확보했다. 단기적으로는 손해처럼 보였지만, 고객의 신뢰를 얻는 데 큰 도움이 됐다.
+						처음에는 모든 게 서툴렀다. 비닐하우스 옆 논에 발을 들이자마자 휘청거리고, 물 가득한 논바닥을 손으로 저어 수평을 맞추는 모습에 마을 어르신들은 웃음을 터뜨렸다. 하지만
+						그 웃음은 곧 따뜻한 손길이 됐다. 농기구를 빌려주고, 방법을 알려주고, 실수하면 같이 웃으며 다시 가르쳐 주었다. 그렇게 김기현 대표는 땀을 흘리고 흙에 손을 묻히며
+						농부로 다시 태어났다.
 					</p>
 					<p>
-						아이디어는 거기서 멈추지 않았다. 신혼 초 즐겨 시켜 먹던 치킨집의 ‘쿠폰 증정’에서 착안해, 10장을 모으면 건표고·표고분말·제철 농산물 등으로 교환할 수 있는 적립 이벤트를 도입했다. 고객 만족도는 높았고, 자연스레 재구매율도 꾸준히 늘어났다.
+						그는 그 과정에서 중요한 사실을 배웠다. “농사는 혼자 짓는 게 아니다.”
 					</p>
 					<p>
-						하지만 마케팅만 앞선다고 해서 판매가 보장되는 것은 아니었다. 임보람 대표는 그래서 ‘좋은 제품을 정당한 가격에, 진심으로 알리자’는 원칙을 세웠다. 표고버섯은 지하 암반수로 재배하고, 중국산 배지 대신 100% 국산 참나무 톱밥을 사용했다. 그 진정성은 소비자에게 그대로 전해졌고, 그녀가 마케팅에 참여한 지 1년 만에 직거래 비율은 0%에서 30%로 늘었다. 20년 동안 도매 일변도였던 농장에 새로운 바람이 불기 시작한 것이다.
+						농사꾼으로 성장하기 위해 얼마나 큰 관심과 사랑을 받았는지 모른다. 지역 어르신들의 신뢰를 얻기 위해 그는 서류 정리나 명함 제작처럼 어르신들이 어려워하는 일들을 먼저
+						나서서 도왔다. 작은 도움은 곧 마음으로 이어졌고, 호감이 쌓이자 어르신들은 본인의 경험과 노하우를 아낌없이 나눠주었다.
+					</p>
+					<p>
+						3년 동안 논밭에서 구르고 배운 시간은 어느새 그를 청년 농업인으로 자리 잡게 했다. 거무스름하게 그을린 피부가 그 증거다.
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -214,16 +229,28 @@
 						</div>
 					</div>
 					<h5>
-						꾸준한 기록이 ‘우리만의 색깔’을 만든다
+						든든한 버팀목, 청년농업 정책
 					</h5>
 					<p>
-						농사에 뛰어드는 청년 농업인 후배들에게 임보람 대표는 ‘블로그’나 ‘유튜브’처럼 소비자와 꾸준히 소통할 수 있는 채널을 꼭 가지라고 조언한다. 그녀는 단골 고객, 더 나아가 ‘팬 층’이 형성되면 농산물 직거래는 자연스럽게 성공으로 이어진다고 믿는다. 농장에 호감을 가진 사람이 많아질수록 농산물에 대한 신뢰도 함께 깊어지기 때문이다. 임보람 대표는 이제 무농약 인증은 기본이며, 그보다 더 중요한 것은 소비자가 직접 눈으로 확인할 수 있는 ‘보여지는 인증’이라고 말한다. 농부 가족의 소소하지만 즐거운 일상을 통해 안전한 농산물이 어떻게 만들어지는지를 보여주는 것,
+						현장에서 어르신들이 그의 ‘살아있는 교과서’였다면, 청년농업 정책은 김기현 대표에게 날개를 달아준 발판이었다. 농업을 시작하려면 땅과 기술, 그리고 수확이 나오기까지 버틸
+						자금이 필요하다. 부모가 기존 농업인이 아니라면 이 세 가지를 갖추기란 특히 어렵다. 김기현 대표 역시 다양한 청년농업 지원제도를 활용하며 농업인의 길을 열었다.
 					</p>
 					<p>
-						그것이야말로 소비자에게 가장 진실하게 와닿는 신뢰의 증거라 생각한다. 그녀 역시 신혼 초부터 블로그를 운영하며 농장의 일상과 가족 이야기를 꾸준히 기록해 왔다. 그 속에는 농부의 하루, 아이들의 웃음, 그리고 버섯 하우스 옆에서 켜는 첼로 선율이 담겨 있다. 그녀의 일상은 어느새 하나의 스토리텔링이 되었고, 농장은 감성 브랜드로 자리 잡았다. 무엇보다 이 꾸준한 기록은 예상치 못한 기회를 불러왔다. 유명 셰프 강레오, 이연복과 함께 방송 프로그램 ‘유쾌한 삼촌’에 출연하며 농장의 이름이 전국에 알려진 것이다. 
+						그가 첫 번째로 선택한 제도는 청년 창업농 지원이었다. 후계농육성자금 대출과 영농정착 지원금, 교육·컨설팅까지 포함된 프로그램이다. 이 지원은 단순한 자금이 아니라, 청년이
+						농업에 뿌리를 내리기 위한 토대였다. 후계농육성자금 5억 원을 5년 거치 20년 상환 조건으로 지원받아 그는 생애 첫 농지를 마련했다.
 					</p>
 					<p>
-						임보람 대표의 이야기는 단순한 홍보가 아니라, ‘농촌의 아름다움’을 보여주는 창이다. 그래서 그녀는 여전히 첼로를 놓지 않는다. 들깨밭 앞, 매실나무 아래에서 연주를 이어가며 자연과 음악이 만나는 순간을 영상으로 담아낸다. 이렇게 차곡차곡 쌓인 기록들은 어느새 농장의 색깔이 되었고 그 안에서 자라나는 표고버섯처럼 농부의 손끝에서 피어난 또 하나의 예술이 됐다. 
+						초기 영농 단계에서 가장 힘든 시기는 첫 수확 전, 수입이 전혀 없던 시간이었다. 매월 1일 정착지원금이 들어올 때마다 그는 안도의 숨을 쉬었다. 그 지원이 없었다면 농사
+						대신 아르바이트를 전전했을지도 모른다.
+					</p>
+					<p>
+						여기에 스마트팜 청년창업 보육사업도 큰 전환점이 됐다. 밀양, 상주, 고흥, 김제 혁신밸리에서 20개월간 생활비와 주거비 약 70만 원을 지원받으며 농업기술을 익힐 수 있는
+						프로그램이다. 김기현 대표는 김제에서 교육을 받으며 온실 운영부터 고급 스마트팜 기술까지 몸으로 배우는 시간을 보냈다. 돈을 내고 배우는 것이 아니라, 돈을 받으며 최첨단
+						농업을 교육받는 경험이었다.
+					</p>
+					<p>
+						그는 말한다. “세계 어디를 둘러봐도 청년이 이렇게 많은 지원을 받고 농업을 시작할 수 있는 나라는 드뭅니다. 그래서 더 많은 청년이 농촌으로 들어왔으면 합니다. 혼자가
+						아닙니다. 든든한 정책이 있고, 함께 걸어갈 동료들이 있습니다.”
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -232,18 +259,21 @@
 							</figure>
 						</div>
 					</div>
-					<blockquote class="quote-normal">
-						임보람 대표의 이야기는 단순한 홍보가 아니라, ‘농촌의 아름다움’을 보여주는 창이다. 그래서 그녀는 여전히 첼로를 놓지 않는다.  들깨밭 앞, 매실나무 아래에서 연주를 이어가며 자연과 음악이 만나는 순간을 영상으로 담아낸다.
-					</blockquote>
 					<h5>
-						우리가 꿈꾸는 농원, 생산을 넘어 모두에게 열린 힐링의 공간으로
+						‘대농업의 시대’를 살아가는 법
 					</h5>
 					<p>
-						임보람 대표 부부의 꿈은 단순한 생산 농장이 아니라 ‘모두의 쉼터가 되는 농원’이다. 도시민들이 주말이면 캠핑과 체험을 즐기고, 믿을 수 있는 먹거리를 직접 보고 구매할 수 있는 공간. 아이들은 흙 위에서 뛰놀고, 어른들은 첼로 연주와 음악회로 휴식을 얻는 곳. 그 풍경이 바로 부부가 그리는 농원의 미래다. 
+						1년 차 3필지에서 시작했던 그의 농지는 이제 13필지까지 늘어났다. 첫해에는 생활비를 간신히 충당할 정도였지만, 지금은 연 매출 3억 원에 이르는 규모로 성장했다. 흔히
+						농업이 힘들다고 말하지만 김기현 대표는 그런 편견 앞에서 오히려 미소를 짓는다.
 					</p>
 					<p>
-						결혼 10년 차, 네 아이의 엄마이자 청년농부로서 그녀는 여전히 도전의 길 위에 있다. 음악처럼 농사를 짓고, 흙처럼 단단하게 하루를 쌓아가는 임보람. 그녀의 삶은 오늘도 이렇게 말하고 있다. ‘젊기 때문에 도전할 수 있고, 사랑하기 때문에 이 길을 걷는다.’ 
-						<i class="icon_last"></i>
+						그에게 농업은 몸이 힘든 만큼 결과가 솔직하게 따라오는 직업이며, 스스로 성장하고 있다는 감각을 매일 확인할 수 있는 일이다. 벼, 콩, 보리, 밀, 포도, 토마토, 감자
+						등 다양한 작물을 기르며 하루가 어떻게 지나가는지도 모를 만큼 바쁘지만, 수확을 마친 뒤 통장에 또박또박 수익이 들어오는 순간 모든 고생이 씻기듯 사라진다. 도시보다
+						생활비는 적게 들고, 수입은 꾸준히 늘어나니 “돈을 두 번 버는 기분”이라고 그는 웃는다.
+					</p>
+					<p>
+						물론 실패가 없는 일은 없다. 하지만 그는 농업에서 한 가지 진리를 배웠다. “농작물은 농부의 발소리를 듣고 큰다.” 정성과 부지런함을 들인 만큼 반드시 보답이 돌아오는
+						세계. 그래서 그는 농업이 단순하고, 정직하며, 그래서 더욱 매력적인 길이라고 말한다.
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -252,48 +282,70 @@
 							</figure>
 						</div>
 					</div>
-						
-					<!-- <article>
+					<h5>
+						함께 걷는 청년농부의 길
+					</h5>
+					<p>
+						김기현 대표의 목표는 분명하다. 더 부지런히 움직이고, 더 성실하게 하루를 쌓아 자신의 정성과 사랑이 가득 담긴 농장을 만들어가는 것. 그가 보기에 농사는 단거리 질주가
+						아닌 마라톤이다. 한결같은 템포로 앞으로 나아가야만 비로소 결실을 맛볼 수 있다. 그래서 그는 같은 길을 걷는 청년농업인들과 꾸준히 교류하며 서로에게 힘이 되어 준다.
+						청년이 모이면 에너지가 생기고, 그 에너지가 다시 지역을 바꾸기 때문이다.
+					</p>
+					<p>
+						그래서 그가 꿈꾸는 농장은 단순한 생산 공간이 아니다. 많은 청년농업인들이 모여 함께 배우고, 실수하고, 성장하며 행복하게 농사 지을 수 있는 울타리다. 다행히 그 울타리는
+						이미 국가의 청년농업 지원정책을 통해 마련되어 있다. 이제 남은 것은 그 안에서 ‘함께’라는 농업의 가치를 실천하는 일이라고 그는 믿는다.
+					</p>
+					<p>
+						김기현 대표는 말한다. 농업은 결국 혼자가 아니라 함께 할 때 더 멀리 갈 수 있다고. 지역의 청년농부들이 서로의 경험과 데이터를 나누고, 문제를 함께 풀어갈 때 비로소
+						진짜 변화가 시작된다. 스마트농업 역시 기술과 데이터만으로 완성되지 않는다. 그 안에서 고민하고 협력하는 사람들이 모일 때, 비로소 의미 있는 혁신이 탄생한다고 그는
+						믿는다.
+					</p>
+					<p>
+						처음엔 혼자였지만 지금 그의 곁에는 든든한 동료 청년농업인들이 있다. 그리고 그는 말없이 또렷하게 초대한다.
+					</p>
+					<p>
+						“농업의 세계로 들어오셔도 좋습니다. 혼자가 아닙니다. 함께 걸어갈 동료들이 이미 기다리고 있습니다.”
+						<i class="icon_last"></i>
+					</p>
+
+					<article>
 						<div class="normal-box">
 							<div>
-								<h4 class="normal-box-stitle">김지영 대표의  </h4>
-								<h5 class="normal-box-title">‘라온농장 & 허바닉’ 살펴보기</h5>
+								<h4 class="normal-box-stitle">김기현 대표의 </h4>
+								<h5 class="normal-box-title">‘팜큐베이터 농장’ 살펴보기</h5>
 								<div class="box-in-box">
-									<span>판매 상품(예정 판매 11월 이후)</span><br>
+									<span>완숙토마토</span><br>
 									유기농 서리태, 유기농 절임배추, 유기농 김장 양념
-									<ul>
-										<li>프리미엄 자두(후무사 자두, 도담 자두, 추희 자두)</li>
-										<li>프리미엄 복숭아(백도, 황도, 납작 복숭아)</li>
-										<li>순수우리미 ‘밥먹는미인쌀(백미, 현미, 찹쌀, 찹쌀현미, 향찰)’</li>
-									</ul>
 								</div>
-								<div class="box-in-box">
-									<span>홈페이지</span><br>
-									<a href="https://herbanic.imweb.me/"  target="blank">https://herbanic.imweb.me/</a>
+								<div class="box-in-box grid-box">
+									<a href="https://smartstore.naver.com/kimppamer" target="blank">
+										<figure>
+											<img src="contents/sub_31_qr_home.png" />
+										</figure>
+										<div>
+											<span>홈페이지</span><br>
+											smartstore.naver.com/kimppamer
+										</div>
+									</a>
 								</div>
-								<div class="box-in-box">
-									<span>인스타그램</span><br>
-									<a href="https://instagram.com/wellnessfarmer_jiyoung"  target="blank">@wellnessfarmer_jiyoung</a>
+								<div class="box-in-box grid-box">
+									<a href="https://instagram.com/team_ppamer" target="blank">
+										<figure>
+											<img src="contents/sub_31_qr_insta.png" />
+										</figure>
+										<div>
+											<span>인스타그램</span><br>
+											@team_ppamer
+										</div>
+									</a>
 								</div>
-								<div class="box-in-box">
-									<span>문의</span><br>
-									인스타그램 DM
-								</div>
-							</div>
-							<div class="normal-box-image">
-								<figure>
-									<img src="contents/sub_31_image_box_1.jpg" >
-								</figure>
-								<figure>
-									<img src="contents/sub_31_image_box_2.jpg" >
-								</figure>
 							</div>
 						</div>
-					</article> -->
+					</article>
 				</div>
 			</div>
 		</section>
 	</main>
 	<footer class="footer" id="footer"></footer>
 </body>
+
 </html>
